app/src/main/fabric8/deployment.yml
apiVersion: v1
kind: DeploymentConfig
metadata:
  name: ${project.artifactId}
spec:
  replicas: 1
  strategy:
    rollingParams:
      timeoutSeconds: 10800
    type: Rolling
  template:
    spec:
      containers:
      - env:
        - name: KUBERNETES_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        - name: JAVA_APP_DIR
          value: /deployments
        - name: SSO_AUTH-SERVER-URL
          value: ${SSO_AUTH-SERVER-URL}/auth
        - name: SSO_REALM
          value: ${SSO_REALM}
        - name: SSO_REALM-PUBLIC-KEY
          value: ${SSO_REALM-PUBLIC-KEY}
        - name: SSO_CLIENT_ID
          value: ${SSO_CLIENT_ID}
        - name: SSO_SECRET
          value: ${SSO_SECRET}
        - name: JAVA_OPTIONS
          value: -Dsso.realm=$(SSO_REALM) -Dsso.auth-server-url=$(SSO_AUTH-SERVER-URL)
        name: secured-swarm-rest
        image: secured-swarm-rest:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 10
        securityContext:
          privileged: false
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      automatic: true
      containerNames:
      - secured-swarm-rest
      from:
        kind: ImageStreamTag
        name: secured-swarm-rest:latest
    type: ImageChange
