app/src/main/fabric8/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: wildfly-swarm-secured-rest
spec:
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: LoadBalancer
