app/src/main/fabric8/route.yml
apiVersion: v1
kind: Route
metadata:
  name: wildfly-swarm-secured-rest
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: wildfly-swarm-secured-rest
